[package]
name = "rget"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = "3"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
url = "2"
futures = "0.3"
http = "0.2"
chrono = "0.4"      
colored = "2.0"      
lazy_static = "1.4.0"
bytesize = "1.3.0"